deployments/dev/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  auth-app-svc
spec:
  selector:
    app:  auth-app
  type:  ClusterIP
  ports:
  - name: auth-svc-port
    port: 80
    targetPort: 3030
