deployments/dev/redis-replica-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  namespace: redis
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
  selector:
    name: redis-replica
