deployments/dev/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.auth.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-app-svc
              port:
                number: 80
